src/objects/UST_Event_Appointments__c.object
<CustomObject>
    <description>The appointments and details related to the Event Registration (e.g. Classroom visits, Lunch, Coach Visit, etc.)</description>
    <fields>
        <fullName>Admissions_Counselor__c</fullName>
        <formula>Event_Registration__r.Admissions_Counselor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admissions Counselor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Category__c</fullName>
        <label>Appointment Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Appointment_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appointment_Contact_Email__c</fullName>
        <description>Email address of department to request visit</description>
        <inlineHelpText>Email address of departmental contact or faculty/staff member to request visit</inlineHelpText>
        <label>Appointment Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Appointment_Contact_Name__c</fullName>
        <description>Name (merged in email) of appointment contact requesting an appointment</description>
        <inlineHelpText>Name (merged in email) of appointment contact requesting an appointment</inlineHelpText>
        <label>Appointment Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Date_Time__c</fullName>
        <label>Appointment Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Appointment_Date__c</fullName>
        <defaultValue>DATEVALUE(&quot;Event_Registration_Date__c&quot;)</defaultValue>
        <description>Date of Appointment</description>
        <inlineHelpText>Date of Appointment</inlineHelpText>
        <label>Appointment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appointment_Detail__c</fullName>
        <description>Added detail about the appointment</description>
        <inlineHelpText>Added detail about the appointment</inlineHelpText>
        <label>Appointment Detail</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Appointment_Status__c</fullName>
        <inlineHelpText>The current status of the Appointment</inlineHelpText>
        <label>Appointment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Pending First Request</fullName>
                </value>
                <value>
                    <fullName>Pending Second Request</fullName>
                </value>
                <value>
                    <fullName>Pending Final Request</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appointment_Time_Formatted__c</fullName>
        <formula>TEXT(
     IF((HOUR(Appointment_Time__c) &gt; 12),
          HOUR(Appointment_Time__c) - 12, 
          IF(HOUR(Appointment_Time__c) == 0, 12, HOUR(Appointment_Time__c))
     )

) 
&amp;
IF(!ISBLANK(HOUR(Appointment_Time__c)),&apos;:&apos;,&apos;&apos;) 
&amp;
IF(MINUTE(Appointment_Time__c)&lt;10,&apos;0&apos;,&apos;&apos;)
&amp;
TEXT(
     MINUTE(Appointment_Time__c)
)
&amp;
IF(!ISBLANK(MINUTE(Appointment_Time__c)),&apos; &apos;,&apos;&apos;) 
&amp;
IF(!ISBLANK(HOUR(Appointment_Time__c)),
     IF(HOUR(Appointment_Time__c) &gt;= 12, &apos;PM&apos;, &apos;AM&apos;), &apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appointment Time Formatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Time_Options__c</fullName>
        <label>Appointment Time Options</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:15 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:45 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:15 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:45 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:15 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:45 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:15 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:45 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:15 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>12:45 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:15 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:45 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:15 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:45 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:15 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appointment_Time__c</fullName>
        <label>Appointment Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Appointment_Title__c</fullName>
        <description>Display title of appointment</description>
        <inlineHelpText>Display title of appointment</inlineHelpText>
        <label>Appointment Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Type__c</fullName>
        <label>Appointment Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Appointment_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Appointment_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <label>Building</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Buildings</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chosen_State__c</fullName>
        <description>Shows whether the appointment was required by it&apos;s type</description>
        <inlineHelpText>Shows whether the appointment was required by it&apos;s type</inlineHelpText>
        <label>Chosen State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Added</fullName>
                </value>
                <value>
                    <fullName>Added and Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class_Title__c</fullName>
        <description>Classroom Title</description>
        <inlineHelpText>Name of class to show on student&apos;s itinerary</inlineHelpText>
        <label>Class Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Created_Appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When check this signifies that the client created this appointment not the front office. This is helpful for automating the Web sign up for appointments.</description>
        <inlineHelpText>When check this signifies that the client created this appointment not the front office. This is helpful for automating the Web sign up for appointments.</inlineHelpText>
        <label>Client Created Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <formula>Event_Registration__r.Contact__r.FirstName &amp;&quot; &quot;&amp; Event_Registration__r.Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description as defined by appointment type (carried over from event registrant web application).</description>
        <inlineHelpText>Description as defined by appointment type (carried over from event registrant web application).</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Do_Not_Show_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do not show the time on generated itineraries. This will allow you to order in the itinerary without showing time.</description>
        <inlineHelpText>Do not show the time on generated itineraries. This will allow you to order in the itinerary without showing time.</inlineHelpText>
        <label>Do Not Show Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Appointment_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Thad Appointment Definition</inlineHelpText>
        <label>Event Appointment Type</label>
        <referenceTo>UST_Event_Appointment_Type__c</referenceTo>
        <relationshipLabel>UST Event Appointments</relationshipLabel>
        <relationshipName>UG_Visit_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Host__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the host assigned to for this appointment.</description>
        <inlineHelpText>Link to the host assigned to for this appointment.</inlineHelpText>
        <label>Event Host</label>
        <referenceTo>UST_Event_Host__c</referenceTo>
        <relationshipLabel>UST Event Appointments</relationshipLabel>
        <relationshipName>UST_Event_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Reg_ID__c</fullName>
        <formula>Event_Registration__r.Event_Instance__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Reg ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Registration_Date__c</fullName>
        <formula>TEXT(MONTH(Event_Registration__r.Date__c))+&quot;/&quot; +TEXT(DAY(Event_Registration__r.Date__c))+&quot;/&quot; +TEXT(YEAR(Event_Registration__r.Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Registration Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Registration__c</fullName>
        <label>Event Registration</label>
        <referenceTo>UST_Event_Registration__c</referenceTo>
        <relationshipName>UG_Event_Appointments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Faculty_Staff_Member__c</fullName>
        <label>Faculty/Staff Member</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Aid_Counselor__c</fullName>
        <formula>Event_Registration__r.Financial_Aid_Counselor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Aid Counselor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host_Location__c</fullName>
        <formula>TRIM(
/*Location free text */
IF(!ISBLANK(Event_Host__r.Location__c), Event_Host__r.Location__c + &apos; &apos;, &apos;&apos;) +

/*Building if selected*/
IF(!ISBLANK(TEXT(Event_Host__r.Building__c)), TEXT(Event_Host__r.Building__c) + &apos; &apos;, &apos;&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Host Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host_Name__c</fullName>
        <formula>Event_Host__r.First_Name__c + &apos; &apos; + Event_Host__r.Last_Name__c +
IF(!ISBLANK(Event_Host__r.Preferred_Title__c) , &apos; - &apos; + Event_Host__r.Preferred_Title__c,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Host Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registrant_Input__c</fullName>
        <description>Optional: Alternative registrant input beyond picking appointment titles (text box, pick lists, etc.)</description>
        <inlineHelpText>Optional: Alternative registrant input beyond picking appointment titles (text box, pick lists, etc.)</inlineHelpText>
        <label>Registrant Input</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <inlineHelpText>Room Location</inlineHelpText>
        <label>Room</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>The order appointments where added by the event registrant via the web.</description>
        <inlineHelpText>The order appointments where added by the event registrant via the web.</inlineHelpText>
        <label>Sort Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UG_Appointment_Category_Order__c</fullName>
        <formula>IF(ISPICKVAL(Appointment_Category__c, &quot;Campus Tour&quot;), 1, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UG Appointment Category Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>UST Event Appointment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Appointment_Title__c</columns>
        <columns>Appointment_Status__c</columns>
        <columns>Appointment_Time_Formatted__c</columns>
        <columns>Host_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Appointments</fullName>
        <columns>NAME</columns>
        <columns>Appointment_Category__c</columns>
        <columns>Appointment_Date_Time__c</columns>
        <columns>Appointment_Status__c</columns>
        <columns>Contact__c</columns>
        <columns>Faculty_Staff_Member__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Appointments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FA_Appt_Next_3_Weeks</fullName>
        <columns>NAME</columns>
        <columns>Appointment_Status__c</columns>
        <columns>Event_Registration_Date__c</columns>
        <columns>Contact__c</columns>
        <columns>Faculty_Staff_Member__c</columns>
        <columns>Appointment_Time_Formatted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Appointment_Category__c</field>
            <operation>equals</operation>
            <value>Financial Aid Visit</value>
        </filters>
        <filters>
            <field>Appointment_Date_Time__c</field>
            <operation>equals</operation>
            <value>NEXT_N_WEEKS:3</value>
        </filters>
        <label>FA Appt Next 3 Weeks</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FA_Appt_Next_Month</fullName>
        <columns>NAME</columns>
        <columns>Appointment_Status__c</columns>
        <columns>Event_Registration_Date__c</columns>
        <columns>Contact__c</columns>
        <columns>Faculty_Staff_Member__c</columns>
        <columns>Appointment_Time_Formatted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Appointment_Category__c</field>
            <operation>equals</operation>
            <value>Financial Aid Visit</value>
        </filters>
        <filters>
            <field>Appointment_Date_Time__c</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>FA Appt Next Month</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FA_Appt_This_Month</fullName>
        <columns>NAME</columns>
        <columns>Appointment_Status__c</columns>
        <columns>Event_Registration_Date__c</columns>
        <columns>Contact__c</columns>
        <columns>Faculty_Staff_Member__c</columns>
        <columns>Appointment_Time_Formatted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Appointment_Category__c</field>
            <operation>equals</operation>
            <value>Financial Aid Visit</value>
        </filters>
        <filters>
            <field>Appointment_Date_Time__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>FA Appt This Month</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FA_Appt_This_Week</fullName>
        <columns>NAME</columns>
        <columns>Appointment_Status__c</columns>
        <columns>Event_Registration_Date__c</columns>
        <columns>Contact__c</columns>
        <columns>Faculty_Staff_Member__c</columns>
        <columns>Appointment_Time_Formatted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Appointment_Category__c</field>
            <operation>equals</operation>
            <value>Financial Aid Visit</value>
        </filters>
        <filters>
            <field>Appointment_Date_Time__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>FA Appt This Week</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FA_Appt_Today</fullName>
        <columns>NAME</columns>
        <columns>Appointment_Status__c</columns>
        <columns>Event_Registration_Date__c</columns>
        <columns>Contact__c</columns>
        <columns>Faculty_Staff_Member__c</columns>
        <columns>Appointment_Time_Formatted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Appointment_Category__c</field>
            <operation>equals</operation>
            <value>Financial Aid Visit</value>
        </filters>
        <filters>
            <field>Appointment_Date_Time__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>FA Appt Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FA_Appt_Tomorrow</fullName>
        <columns>NAME</columns>
        <columns>Appointment_Status__c</columns>
        <columns>Event_Registration_Date__c</columns>
        <columns>Contact__c</columns>
        <columns>Faculty_Staff_Member__c</columns>
        <columns>Appointment_Time_Formatted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Appointment_Category__c</field>
            <operation>equals</operation>
            <value>Financial Aid Visit</value>
        </filters>
        <filters>
            <field>Appointment_Date_Time__c</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <label>FA Appt Tomorrow</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Host_Assignment</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Appointment_Type__c</columns>
        <columns>Appointment_Category__c</columns>
        <columns>Event_Appointment_Type__c</columns>
        <columns>Appointment_Time__c</columns>
        <columns>Event_Registration_Date__c</columns>
        <columns>Appointment_Status__c</columns>
        <columns>Event_Host__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Event_Appointment_Type__c</field>
            <operation>equals</operation>
            <value>AT-0309</value>
        </filters>
        <filters>
            <field>Event_Registration_Date__c</field>
            <operation>equals</operation>
            <value>2/23/2019,2/22/2019</value>
        </filters>
        <label>Host Assignment</label>
        <language>en_US</language>
        <sharedTo>
            <group>UG_Enrollment</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Test_Assignment</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Event_Appointment_Type__c</columns>
        <columns>Appointment_Type__c</columns>
        <columns>Appointment_Time__c</columns>
        <columns>Event_Host__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Appointment_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Event_Registration_Date__c</field>
            <operation>equals</operation>
            <value>11/30/2018</value>
        </filters>
        <label>Test Assignment</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>APPT-{000000}</displayFormat>
        <label>Event Appointments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UST Event Appointments</pluralLabel>
    <recordTypes>
        <fullName>Daily_Visit</fullName>
        <active>true</active>
        <label>Daily Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Overnight</fullName>
        <active>true</active>
        <label>Overnight</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>